--- a/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinInfo.storyboard
+++ b/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinInfo.storyboard
@@ -14,19 +14,12 @@
         <scene sceneID="EUG-9Y-GgM">
             <objects>
                 <viewController id="EfW-ft-biG" customClass="GrinInfoViewController" customModule="ViteBusiness" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="A94-RV-Ewu">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="A94-RV-Ewu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V6b-4M-YNf" customClass="BalanceInfoNavView" customModule="ViteBusiness">
-                                <rect key="frame" x="0.0" y="20" width="375" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="DbQ-U1-9mN"/>
-                                </constraints>
-                            </view>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJb-g3-lQ7" customClass="UIImageView">
-                                <rect key="frame" x="24" y="88" width="327" height="225"/>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jJb-g3-lQ7" customClass="UIImageView">
+                                <rect key="frame" x="24" y="20" width="327" height="225"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spendable" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDR-WM-f0Y">
                                         <rect key="frame" x="16" y="19" width="61" height="18"/>
@@ -55,7 +48,7 @@
                                         </connections>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="≈-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SjU-06-T11">
-                                        <rect key="frame" x="297.5" y="48" width="15.5" height="17"/>
+                                        <rect key="frame" x="297" y="48" width="16" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -67,7 +60,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awaiting Confirmation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQO-kL-GJJ">
-                                        <rect key="frame" x="14" y="85" width="124.5" height="15"/>
+                                        <rect key="frame" x="14" y="85" width="125" height="15"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.70459653253424659" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -78,14 +71,14 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kmr-eG-9Nr">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kmr-eG-9Nr">
                                         <rect key="frame" x="0.0" y="181" width="327" height="44"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="1Un-hj-8eO"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avc-Ax-cnF">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avc-Ax-cnF">
                                         <rect key="frame" x="164" y="181" width="163" height="44"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="转帐">
@@ -95,14 +88,14 @@
                                             <action selector="sendAciton:" destination="EfW-ft-biG" eventType="touchUpInside" id="wAD-8h-mru"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Foe-va-PhD">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Foe-va-PhD">
                                         <rect key="frame" x="163" y="188" width="1" height="30"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="zmh-A1-NtX"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gha-QF-rWc">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gha-QF-rWc">
                                         <rect key="frame" x="0.0" y="181" width="163" height="44"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="收款">
@@ -199,36 +192,13 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="交易记录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXH-Fp-qNb">
-                                <rect key="frame" x="24" y="329" width="351" height="17"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <color key="textColor" red="0.24313725490196078" green="0.29019607843137252" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="74" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YlC-RQ-Ksf">
-                                <rect key="frame" x="0.0" y="350" width="375" height="317"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="EfW-ft-biG" id="7vb-fu-MuH"/>
-                                    <outlet property="delegate" destination="EfW-ft-biG" id="N8L-rs-3OX"/>
-                                </connections>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="61v-Z3-PAx" firstAttribute="trailing" secondItem="V6b-4M-YNf" secondAttribute="trailing" id="1OJ-qZ-BBi"/>
                             <constraint firstItem="61v-Z3-PAx" firstAttribute="trailing" secondItem="jJb-g3-lQ7" secondAttribute="trailing" constant="24" id="3qL-zm-yhJ"/>
                             <constraint firstItem="jJb-g3-lQ7" firstAttribute="leading" secondItem="61v-Z3-PAx" secondAttribute="leading" constant="24" id="5kR-h5-SO8"/>
-                            <constraint firstItem="61v-Z3-PAx" firstAttribute="trailing" secondItem="YlC-RQ-Ksf" secondAttribute="trailing" id="DnX-3T-yXm"/>
-                            <constraint firstItem="61v-Z3-PAx" firstAttribute="trailing" secondItem="cXH-Fp-qNb" secondAttribute="trailing" id="LUb-39-8eR"/>
-                            <constraint firstItem="61v-Z3-PAx" firstAttribute="bottom" secondItem="YlC-RQ-Ksf" secondAttribute="bottom" id="MUV-aj-9ij"/>
-                            <constraint firstItem="cXH-Fp-qNb" firstAttribute="top" secondItem="jJb-g3-lQ7" secondAttribute="bottom" constant="16" id="Nv2-xr-aeE"/>
-                            <constraint firstItem="V6b-4M-YNf" firstAttribute="leading" secondItem="61v-Z3-PAx" secondAttribute="leading" id="OZy-aH-cpK"/>
-                            <constraint firstItem="YlC-RQ-Ksf" firstAttribute="leading" secondItem="61v-Z3-PAx" secondAttribute="leading" id="ZDs-6l-vSS"/>
-                            <constraint firstItem="YlC-RQ-Ksf" firstAttribute="top" secondItem="cXH-Fp-qNb" secondAttribute="bottom" constant="4" id="eLx-Sw-3hT"/>
-                            <constraint firstItem="61v-Z3-PAx" firstAttribute="top" secondItem="V6b-4M-YNf" secondAttribute="top" id="eyu-Do-Z0T"/>
-                            <constraint firstItem="cXH-Fp-qNb" firstAttribute="leading" secondItem="61v-Z3-PAx" secondAttribute="leading" constant="24" id="gDu-rD-CvU"/>
-                            <constraint firstItem="jJb-g3-lQ7" firstAttribute="top" secondItem="V6b-4M-YNf" secondAttribute="bottom" constant="-60" id="tV1-I5-wnG"/>
+                            <constraint firstItem="61v-Z3-PAx" firstAttribute="bottom" secondItem="jJb-g3-lQ7" secondAttribute="bottom" id="RUy-hj-qvN"/>
+                            <constraint firstItem="jJb-g3-lQ7" firstAttribute="top" secondItem="61v-Z3-PAx" secondAttribute="top" id="z4Z-1S-itm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="61v-Z3-PAx"/>
                     </view>
@@ -245,11 +215,8 @@
                         <outlet property="spendableAcountLabel" destination="7a7-bK-pCP" id="xQO-3a-vG7"/>
                         <outlet property="spendableExchangeLalbe" destination="SjU-06-T11" id="R07-Lc-cKk"/>
                         <outlet property="spendableTitleLabel" destination="YDR-WM-f0Y" id="B7d-6H-xBx"/>
-                        <outlet property="tableView" destination="YlC-RQ-Ksf" id="PYS-iF-ZkD"/>
-                        <outlet property="titleView" destination="V6b-4M-YNf" id="FUb-Pe-M8J"/>
                         <outlet property="totalCountLabel" destination="wR4-iR-AxT" id="yKS-wB-PVu"/>
                         <outlet property="totalTitleLabel" destination="5wp-QR-z2e" id="1JU-NW-Y7d"/>
-                        <outlet property="transcationTiTleLabel" destination="cXH-Fp-qNb" id="RUa-7l-CSY"/>
                         <outlet property="waitingTitleLabel" destination="dQO-kL-GJJ" id="j5y-8O-TOS"/>
                     </connections>
                 </viewController>
